force-app/main/default/objects/simpli_lv__List_View_Config_Condition__c/simpli_lv__List_View_Config_Condition__c.object-meta.xml
<CustomObject>
    <label>List View Config Condition</label>
    <nameField>
        <displayFormat>LVCC-{0}</displayFormat>
        <label>List View Config Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View Config Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>