force-app/main/default/objects/simpli_lv__List_View_Config_Condition__c/fields/simpli_lv__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Field_Name__c</fullName>
    <description>The field label that corresponds to the column being validated against.</description>
    <inlineHelpText>The field label that corresponds to the column being validated against.</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>