force-app/main/default/objects/simpli_lv__List_View_Config_Condition__c/fields/simpli_lv__Highlight_Color__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Highlight_Color__c</fullName>
    <description>The color the row should be highlighted in. This value should correspond to an HTML formatted color code. i.e. #FFFFFF = white, #000000 = black, #D43230 = red etc. If no color is set a default lightning color is used.</description>
    <inlineHelpText>The color the row should be highlighted in. This value should correspond to an HTML formatted color code. i.e. #FFFFFF = white, #000000 = black, #D43230 = red etc. If no color is set a default lightning color is used.</inlineHelpText>
    <label>Highlight Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>