force-app/main/default/objects/simpli_lv__List_View_Config_Condition__c/fields/simpli_lv__List_View_Config__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__List_View_Config__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>List View Config</label>
    <referenceTo>simpli_lv__List_View_Config__c</referenceTo>
    <relationshipLabel>List View Config Conditions</relationshipLabel>
    <relationshipName>List_View_Config_Conditions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>