force-app/main/default/objects/simpli_lv__List_View_Config_Condition__c/fields/simpli_lv__Operator__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Operator__c</fullName>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Not Equal</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>