force-app/main/default/objects/simpli_lv__List_View_Config_Condition__c/fields/simpli_lv__Value__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Value__c</fullName>
    <description>The value of the condition that must be met.</description>
    <inlineHelpText>The value of the condition that must be met.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>