force-app/main/default/objects/simpli_lv__List_View_Config_Condition__c/listViews/simpli_lv__All.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All</fullName>
    <columns>NAME</columns>
    <columns>simpli_lv__Value__c</columns>
    <columns>simpli_lv__Order__c</columns>
    <columns>simpli_lv__Operator__c</columns>
    <columns>simpli_lv__List_View_Config__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>